# visionrt

./: .gitignore  README.md  build_module.sh  pyproject.toml  usage.py
csrc/: bindings.cpp  buffers.hpp  camera.hpp  kernels.cu
examples/: profile_capture.py  profile_e2e.py  visualize.py
visionrt/: __init__.py  __init__.pyi  _visionrt.pyi  compiler.py  config.py  optim.py  preprocess.py  utils.py
