[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "torch",
    "pybind11",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "visionrt"
version = "0.1.0"
description = "Zero overhead real-time computer vision inference "
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Abiel Almonte", email = "abielalmonte.eng@gmail.com"},
]

dependencies = [
    "opencv-python==4.10.0.84",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "numpy==2.1.2",
    "matplotlib",
    "seaborn",
    "nvtx",
    "optuna"
]

[tool.uv.sources]
torch = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128" #blackwell

[tool.uv]
dev-dependencies = [
    "black",
    "pybind11-stubgen",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["csrc*", "benchmarks*", "images*"]

[tool.setuptools.package-data]
visionrt = ["*.so", "*.pyd", "*.pyi"]

# Type checker configuration
[tool.pyright]
stubPath = "."
extraPaths = ["."]

[tool.mypy]
mypy_path = "."
